--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
   <head>
     <title>HN infinite scroll</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.scss" />
+    <!-- <link rel="stylesheet" href="src/styles.scss" /> -->
   </head>
 
   <body>
+    <div class="window">
+      <div class="list"></div>
+    </div>
     <script src="src/index.ts"></script>
   </body>
 </html>
