loading more works!

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
 
   <body>
-    <div class="window">
-      <div class="list"></div>
-    </div>
+    <button id="more">Load more</button>
+    <div class="list"></div>
+
     <script src="src/index.ts"></script>
   </body>
 </html>
