cleanup & small fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>HN infinite scroll</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.scss" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
