--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>HN infinite scroll</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="A simple app that shows a list of the latest 500 stories posted on Hacker News"
+    />
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="manifest" href="/manifest.webmanifest" />
   </head>
 
   <body>
